--- a/views/home-admin.ejs
+++ b/views/home-admin.ejs
@@ -72,13 +72,13 @@
             <td><%= request.title %></td>
             <td><%= request.userId %></td>
             <td class="text-center justify-content-center">
-              <div class="form-check text-center justify-content-center">
-                <input class="form-check-input text-center justify-content-center" type="radio" name="<%= request.id %>" value="approve">
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="<%= request.id %>" value="approve">
               </div>
             </td>
             <td class="text-center justify-content-center">
-              <div class="form-check text-center justify-content-center">
-                <input class="form-check-input text-center justify-content-center" type="radio" name="<%= request.id %>" value="disapprove">
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="<%= request.id %>" value="disapprove">
               </div>
             </td>
           </tr>
