--- a/views/home-admin.ejs
+++ b/views/home-admin.ejs
@@ -55,8 +55,8 @@
     </form>
  
     <br>
-    <h3>Book Requests</h3>
-    <form action="/process-checkouts" method="POST" id="book-requests-form">
+    <h3>Book Checkout Requests</h3>
+    <form action="/process-checkouts" method="POST" id="checkout-form">
       <table class="table">
         <thead>
           <tr>
@@ -67,7 +67,7 @@
           </tr>
         </thead>
         <tbody>
-          <% books.forEach(function(request) { %>
+          <% booksout.forEach(function(request) { %>
           <tr>
             <td><%= request.title %></td>
             <td><%= request.userId %></td>
@@ -87,6 +87,40 @@
       </table>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+
+    <h3>Book Checkin Requests</h3>
+    <form action="/process-checkouts" method="POST" id="checkin-form">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Book</th>
+            <th>User</th>
+            <th>Approve</th>
+            <th>Disapprove</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% booksin.forEach(function(request) { %>
+          <tr>
+            <td><%= request.title %></td>
+            <td><%= request.userId %></td>
+            <td class="text-center justify-content-center">
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="<%= request.id %>" value="approve">
+              </div>
+            </td>
+            <td class="text-center justify-content-center">
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="<%= request.id %>" value="disapprove">
+              </div>
+            </td>
+          </tr>
+          <% }); %>
+        </tbody>
+      </table>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+
   </div>
 
   <script>
@@ -108,7 +142,7 @@
       .catch(error => console.error('Error:', error));
     });
 
-    document.getElementById('book-requests-form').addEventListener('submit', (event) => {
+    document.getElementById('checkout-form').addEventListener('submit', (event) => {
       event.preventDefault(); 
 
       const data = new URLSearchParams();
@@ -116,7 +150,27 @@
           data.append(pair[0], pair[1]);
       }
 
-      fetch('/process-checkouts', {
+      fetch('/process-checks', {
+        method: 'POST',
+        body: data
+      })
+      .then(response => response.text())
+      .then(() => {
+        location.reload()
+      })
+      .catch(error => console.error('Error:', error));
+  });
+
+
+  document.getElementById('checkin-form').addEventListener('submit', (event) => {
+      event.preventDefault(); 
+
+      const data = new URLSearchParams();
+      for (const pair of new FormData(event.target)) {
+          data.append(pair[0], pair[1]);
+      }
+
+      fetch('/process-checks', {
         method: 'POST',
         body: data
       })
