--- a/views/home.ejs
+++ b/views/home.ejs
@@ -57,7 +57,7 @@
           <% }); %>
         </select>
       </div>
-      <button type="submit" class="btn btn-primary">Return Book</button>
+      <button type="submit" class="btn btn-primary">Submit checkin request</button>
     </form>
     <% } %>
 
