--- a/views/home-admin.ejs
+++ b/views/home-admin.ejs
@@ -17,7 +17,7 @@
       </div>
       <div class="form-group">
         <label for="quantity">Quantity:</label>
-        <input type="number" class="form-control" id="quantity" name="quantity" required>
+        <input type="number" min=0 class="form-control" id="quantity" name="quantity" required>
       </div>
       <button type="submit" class="btn btn-primary">Add Book</button>
     </form>
